linux-kernel-di (0.31) UNRELEASED; urgency=low

  * Blars Blarson
    - Minor wording fix in README. Closes: #231514
  * Joey Hess
    - ia64 needs fat-modules installed by default for elilo-installer to work.
      Increase it to standard, though it really only needs to be standard on
      ia64.

 -- Joey Hess <joeyh@debian.org>  Fri,  6 Feb 2004 23:30:45 -0500

linux-kernel-di (0.30) unstable; urgency=low

  * Jeff Bailey
    - Add sparc
    - Use vmlinuz instead of vmlinux
    - Add sparc32 and sparc64 flavours
    - Install modules for affs, ipv6 and ppp.
  * Joey Hess
    - Move all the wireless stuff out of nic-modules and nic-common-modules,
      and to nic-extra-modules. Full wireless support will not fit on the
      root floppy, has to go to net_drivers.
    - nic-pcmcia-modules now depends on nic-extra-modules, for some
      wireless modules.
    - Move pcnet32 to nic-extra-modules to free up more space; it's mainly
      used by vmware.
    - Turn off the sparc stuff for this quick release.
    - Update to version 2.4.24-2 of the i386 kernel.
    - Add new sk98lin and forcedeth drivers to nic-extra-modules.

 -- Joey Hess <joeyh@debian.org>  Fri,  6 Feb 2004 18:55:28 -0500

linux-kernel-di (0.29) unstable; urgency=low

  * Remove the i386 2.4.22 stock kernel now that d-i has switched to 2.4.24.
  * Add the following kernel modules that are new in 2.4.24:
    - dm-mod to md-modules
    - megaraid2 to scsi-extra-modules
    - sym53c8xx_2 to scsi-modules
  * Speakup needs to be split for now as it's still using 2.4.22, which does
    not have the above modules.
  * Update powerpc kernel to version -9.

 -- Joey Hess <joeyh@debian.org>  Fri, 30 Jan 2004 15:17:35 -0500

linux-kernel-di (0.28) unstable; urgency=low

  * Update powerpc kernel to version -6.

 -- Joey Hess <joeyh@debian.org>  Wed, 28 Jan 2004 13:43:16 -0500

linux-kernel-di (0.27) unstable; urgency=low

  * Fix naming of powerpc's nic-extra-modules and nic-shared-modules.