@@ -6,6 +6,7 @@ linux-kernel-di (0.31) UNRELEASED; urgency=low
     - ia64 needs fat-modules installed by default for elilo-installer to work.
       Increase it to standard, though it really only needs to be standard on
       ia64.
+    - Use debhelper's new udeb support.
 
  -- Joey Hess <joeyh@debian.org>  Fri,  6 Feb 2004 23:30:45 -0500
 
